<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".tablayout">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tablayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:tabSelectedTextColor="@android:color/black"
        app:tabTextColor="@android:color/white">


        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabrelative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:saveEnabled="true"
            android:text="@string/relativetab"

            />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabconstraint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/constrainttab" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tablinear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lineartab" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tablayout" />

</RelativeLayout>